--- a/honghaier/packages.config
+++ b/honghaier/packages.config
@@ -8,6 +8,8 @@
   <package id="InfluxDB.Client.Core" version="4.14.0" targetFramework="net48" />
   <package id="JsonSubTypes" version="2.0.1" targetFramework="net48" />
   <package id="log4net" version="2.0.15" targetFramework="net48" />
+  <package id="MaterialDesignColors" version="3.0.0" targetFramework="net48" />
+  <package id="MaterialDesignThemes" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net48" />
