feat(TestView): Add support for displaying real-time time series power curves on TestView

--- a/honghaier/App.config
+++ b/honghaier/App.config
@@ -1,47 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+  </startup>
   <appSettings>
     <!--grpc通信，wukong服务的ip地址和端口-->
     <add key="WukongServerIP" value="localhost" />
     <add key="WukongServerPort" value="9009" />
-    
     <!--grpc通信，honghaier服务的ip地址和端口-->
     <add key="HonghaierServerIP" value="localhost" />
     <add key="HonghaierServerPort" value="9007" />
-    
     <!--ads通信，plc的neid和端口-->
     <!--<add key="PLCNetID" value="5.73.4.90.1.1" />-->
     <add key="PLCNetID" value="5.73.4.84.1.1" />
     <add key="PLCPort" value="801" />
-	  
-	<!--加热算法的pid参数-->
-	<add key="PID-P" value="0.01" />
-	<add key="PID-I" value="0.005" />
-	<add key="PID-D" value="0.001" />	  
-	<!--Time scale DataBase 相关配置：-->
-	<add key="TimeScaleDBEnable" value="false" />
-	<add key="TimeScaleServerIP" value="localhost" />
+    <!--加热算法的pid参数-->
+    <add key="PID-P" value="0.01" />
+    <add key="PID-I" value="0.005" />
+    <add key="PID-D" value="0.001" />
+    <!--Time scale DataBase 相关配置：-->
+    <add key="TimeScaleDBEnable" value="false" />
+    <add key="TimeScaleServerIP" value="localhost" />
     <add key="TimeScaleDBPassword" value="postgres" />
     <add key="TimeScaleServerUser" value="postgres" />
     <add key="TimeScaleDBName" value="postgres" />
     <!-- If not defined here, read from env instead. <add key="TimeScaleTableName" value="RUNTIMENAME_Merlin_HHR" /> -->
     <add key="TimeScaleDBPort" value="5432" />
-
-	<!--Influx相关配置：是否使能；通信Token；Bucket：类似传统关系数据库的数据库单元；-->
-	<add key="InfluxDBEnable" value="false" />
-	<add key="InfluxDBToken" value="CG_OChirh1aHL-QtjhKXBCd0FZ0odg_70i2c05aX338my42ezzr_CHOCDJ3GpmdFdbOmeB6uJWX0toaL74gmYw==" />
-	<add key="InfluxDBBucket" value="Honghaier" />
-	<add key="InfluxDBOrg" value="CYTEK" />
-	<add key="InfluxServerIP" value="localhost" />
-	<add key="InfluxServerPort" value="8086" />
-    
+    <!--Influx相关配置：是否使能；通信Token；Bucket：类似传统关系数据库的数据库单元；-->
+    <add key="InfluxDBEnable" value="false" />
+    <add key="InfluxDBToken" value="CG_OChirh1aHL-QtjhKXBCd0FZ0odg_70i2c05aX338my42ezzr_CHOCDJ3GpmdFdbOmeB6uJWX0toaL74gmYw==" />
+    <add key="InfluxDBBucket" value="Honghaier" />
+    <add key="InfluxDBOrg" value="CYTEK" />
+    <add key="InfluxServerIP" value="localhost" />
+    <add key="InfluxServerPort" value="8086" />
     <!--加热器运行的最大电流值，单位是安培；这里只考虑了最普通的单psu场景，需要完善多psu的场景，之前讨论的是在plc层做结构封装，避免复杂性暴露-->
     <add key="MaxAmp" value="60" />
-	<add key="SciChartLength" value="80" />
-
+    <add key="SciChartLength" value="1080" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -93,6 +88,34 @@
         <assemblyIdentity name="Microsoft.Extensions.ObjectPool" publicKeyToken="adb9793829ddae60" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-7.0.13.0" newVersion="7.0.13.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SciChart.Drawing" publicKeyToken="b55dd9efe817e823" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.6.0.26505" newVersion="6.6.0.26505" />
+      </dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="SciChart.Core" publicKeyToken="b55dd9efe817e823" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-6.6.0.26505" newVersion="6.6.0.26505" />
+	  </dependentAssembly>
+      <dependentAssembly>
+		<assemblyIdentity name="SciChart.Charting" publicKeyToken="b55dd9efe817e823" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-6.6.0.26505" newVersion="6.6.0.26505" />
+	  </dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="SciChart.Data" publicKeyToken="b55dd9efe817e823" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-6.6.0.26505" newVersion="6.6.0.26505" />
+	  </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
