--- a/honghaier/packages.config
+++ b/honghaier/packages.config
@@ -23,6 +23,15 @@
   <package id="Npgsql" version="6.0.7" targetFramework="net48" />
   <package id="RestSharp" version="110.1.0" targetFramework="net48" />
   <package id="SciChart" version="6.6.0.26505" targetFramework="net48" />
+  <package id="SciChart.DirectX" version="6.6.0.26505" targetFramework="net48" />
+  <package id="SciChart.DrawingTools" version="6.6.0.26505" targetFramework="net48" />
+  <package id="SharpDX" version="4.2.0" targetFramework="net48" />
+  <package id="SharpDX.D3DCompiler" version="4.2.0" targetFramework="net48" />
+  <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net48" />
+  <package id="SharpDX.Direct3D11.Effects" version="4.2.0" targetFramework="net48" />
+  <package id="SharpDX.Direct3D9" version="4.2.0" targetFramework="net48" />
+  <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net48" />
+  <package id="SharpDX.Mathematics" version="4.2.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="6.0.1" targetFramework="net48" />
